# zeroqt

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui
.github/: copilot-instructions.md
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  cmake_install.cmake  piweather  piweather_qmltyperegistrations.cpp
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/.qt/deploy_qml_imports/: piweather.cmake
_codeql_build_dir/.qt_plugins/: Qt6_QmlPlugins_Imports_piweather.cmake  Qt6_QmlPlugins_Imports_piweather.rsp
_codeql_build_dir/PiWeather/: qmldir
_codeql_build_dir/piweather_autogen/: deps  moc_predefs.h
_codeql_build_dir/qmltypes/: piweather_foreign_types.txt
qml/: MacroButton.qml  MacroGrid.qml  SettingsPage.qml  main.qml
resources/: macros.json
scripts/: bluetooth-hid.service  macropad.service  setup-bluetooth.sh
src/: bluetoothhid.cpp  bluetoothhid.h  macroconfig.cpp  macroconfig.h  macrocontroller.cpp  macrocontroller.h  main.cpp
